@@ -1,4 +1,4 @@
-MANIFEST for ded, version t20000117
+MANIFEST for ded, version t20000124
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
