@@ -1,3 +1,13 @@
+2000-01-24  Thomas E. Dickey  <dickey@clark.net>
+
+	* aclocal.m4: resync with my-autoconf (minor changes)
+
+	* src/ftree.c: don't bother making zero[] const (it's inconsistent).
+	open .ftree file in binary mode using O_BINARY flag defined on PC ports.
+	use NAMLEN() macro
+
+	* src/dedtype.c: use NAMLEN() macro
+
 2000-01-17  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/makefile.in:
